- Added Hazelcast caching on the "/issues" API endpoint  - Implemented searching on Issue title  - "/issues" endpoint now returns 5 sets of data totally 30 issues
